# SpaceInvaders-Remake-With-Raylib

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.code-workspace  main.cpp
.github/workflows/: build.yml
src/: Components.h  ECS.h  Game.cpp  Game.h  GenericPool.h  Systems.h
src/components/: AIComponent.h  AllComponents.h  AnimationComponent.h  BulletComponent.h  ColliderComponent.h  HealthComponent.h  LifetimeComponent.h  MovementComponent.h  RenderComponent.h  TagComponent.h  TransformComponent.h
src/core/: GameData.h  GameState.h  PlayerCommand.h
src/events/: CollisionEvent.h  GameEvents.h  ShootEvent.h
src/systems/: AISystem.h  AllSystems.h  AnimationSystem.h  BulletSystem.h  ColliderSystem.h  GameManagerSystem.h  InputSystem.h  LifeTimeSystem.h  MovementSystem.h  PlayerControlSystem.h  RenderSystem.h  UISystem.h
src/types/: EntityTypes.h
